[package]
authors = ["Zach Blankenship <zach.blankenship@gmail.com>"]
description = "A wrapper for the Oanda Rest-v20 API"
homepage = "https://github.com/blankenshipz/oanda-rs"
keywords = ["oanda", "forex"]
license-file = "LICENSE"
name = "oandars"
readme = "README.md"
repository = "https://github.com/blankenshipz/oanda-rs"
version = "0.1.2"

[dependencies]
chrono = { version = "0.3", features = ["serde"] }
hyper = "0.10.9"
hyper-native-tls = "0.2.2"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
ratelimit = "0.4.1"
