[package]
authors = ["Zach Blankenship <zach.blankenship@gmail.com>"]
description = "A wrapper for the Oanda Rest-v20 API"
homepage = "https://github.com/blankenshipz/oanda-rs"
keywords = ["oanda", "forex"]
license-file = "LICENSE"
name = "oandars"
readme = "README.md"
repository = "https://github.com/blankenshipz/oanda-rs"
version = "0.1.2"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
hyper = "0.14.25"
hyper-native-tls = "0.3.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
ratelimit = "0.5.1"
