[package]
authors = ["Zach Blankenship <zach.blankenship@gmail.com>"]
description = "A wrapper for the Oanda Rest-v20 API"
homepage = "https://github.com/blankenshipz/oanda-rs"
keywords = ["oanda", "forex"]
license-file = "LICENSE"
name = "oandars"
readme = "README.md"
repository = "https://github.com/blankenshipz/oanda-rs"
version = "0.1.2"
edition = "2021"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
hyper = { version = "0.14.25", features = ["client", "http1", "http2", "tcp"] }
hyper-tls = { version = "0.5.0", features = [] }
tokio = { version = "1", use-default-features = false }
serde = "1"
serde_derive = "1"
serde_json = "1"
ratelimit = "0.5.1"
